# parallelProgramming

./: .gitignore  README.md
hybrid/: .clang-format  CMakeLists.txt  Makefile  bonusge.cpp  bonusge.h  constant.h  hybrid_interface.cpp  hybridbh.cpp  hybridbh.h  mpi_interface.h  mpibh.cpp  omp_interface.cpp  omp_interface.h  ompbh.cpp  perf_hybrid.sh  process_submission.py  serial.cpp  test_mpi.cpp  utility.cpp  utility.h
mpi/: CMakeLists.txt  Makefile  README.md  hybrid_interface.cpp  hybridbh.cpp  interface.h  mpibh.cpp  mpibh.h  octree_coord.py  ompbh.h  process_submission.py  test_mpi.cpp  test_omp.cpp  utility.cpp  visualizer.cpp
openmp/: CMakeLists.txt  Makefile  README.md  RUNS.md  build.h  hybrid_interface.h  hybridbh.h  interface.cpp  main.cpp  mpi_interface.cpp  mpibh.cpp  mpibh.h  process_submission.py  serial.h  test_omp.cpp  utility.cpp  utility.h  visualizer.cpp  visualizer.h
